@@ -96,6 +96,8 @@ Nov 29th PU32 (Peter) - No real large changes. There is a new JFocus dev view th
 Nov 30th PU33 (Peter) - No real changes. Just another button!
 
 Nov 30th NVA1 (Peter) - Three.js html file added
+Nov 30th NVA2 (Peter) - Three.js html file updated
+
 
 
 Thanks for taking your time to read the change log! 
